# igraph-cpp

./: CMakeLists.txt  README.md
include/: directed_graph.hpp  directed_graph.ipp  graph.hpp  graph.ipp  igraph
include/algorithms/: chordal.ipp  maximal_cliques.ipp  maximum_cardinality_search.ipp  moral.ipp  topological_sorting.ipp
include/structures/: directed_graph.hpp  directed_graph.ipp  graph.hpp  graph.ipp
tests/: CMakeLists.txt  directed_graph.cpp  graph.cpp
